--- a/package.json
+++ b/package.json
@@ -8,7 +8,22 @@
         "build": "tsc && vite build",
         "preview": "vite preview"
     },
+    "dependencies": {
+        "@react-icons/all-files": "^4.1.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-router-dom": "^6.26.2"
+    },
     "devDependencies": {
+        "@types/node": "^22.7.5",
+        "@types/react": "^18.3.11",
+        "@types/react-dom": "^18.3.0",
+        "@typescript-eslint/eslint-plugin": "^8.8.1",
+        "@typescript-eslint/parser": "^8.8.1",
+        "@vitejs/plugin-react": "^4.3.2",
+        "eslint": "^8.45.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.3",
         "typescript": "^5.6.2",
         "vite": "^5.4.8"
     }
